objects/ebsta1__Lead_Report__c.object
<CustomObject>
    <fields>
        <fullName>ebsta1__Ebsta_Score_Trend_Last_30_Days__c</fullName>
        <label>Ebsta Score Trend Last 30 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score_Trend_Last_7_Days__c</fullName>
        <label>Ebsta Score Trend Last 7 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score_Trend_Last_90_Days__c</fullName>
        <label>Ebsta Score Trend Last 90 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score__c</fullName>
        <label>Ebsta Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ebsta1__Last_Email_Received__c</fullName>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_Email_Sent__c</fullName>
        <label>Last Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_Month_Emails_Exchanged_Inbound__c</fullName>
        <label>Last Month Emails Exchanged Inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_Month_Emails_Exchanged_Outbound__c</fullName>
        <label>Last Month Emails Exchanged Outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_Week_Emails_Exchanged_Inbound__c</fullName>
        <label>Last Week Emails Exchanged Inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_Week_Emails_Exchanged_Outbound__c</fullName>
        <label>Last Week Emails Exchanged Outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Reports</relationshipLabel>
        <relationshipName>Lead_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ebsta1__Total_Emails_Exchanged_Inbound__c</fullName>
        <label>Total Emails Exchanged Inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Total_Emails_Exchanged_Outbound__c</fullName>
        <label>Total Emails Exchanged Outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lead Report</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Lead Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>